maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:10: error: Boolean does not take parameters
      else (Dirr==1){Dirr=0}
                    ^Escaper:43: error: type mismatch;
 found   : Unit
 required: Int
  if (Dirr==1){
  ^